[workspace]
members = [
    "core/",
    "core/network",
    "core/ffi",
    "examples/rust"
]

[patch.crates-io]
tree_hash = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "tree_hash" }
tree_hash_derive = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "tree_hash_derive" }
eth2_ssz = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_ssz" }
eth2_ssz_derive = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_ssz_derive" }
eth2_ssz_types = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_ssz_types" }
types = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "types" }
eth2_hashing = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_hashing" }

