[package]
name = "mothra"
version = "0.1.0"
authors = ["Jonny Rhea <jonny.rhea@consensys.net>"]
edition = "2018"
description = "P2P for dummies."
license = "Apache-2.0"

[dependencies]
network =  { path = "network", version = "0.1.0", package = "mothra-network"}
parking_lot = "0.9.0"

slog = { version = "2.5.2" , features = ["max_level_trace"] }
ctrlc = { version = "3.1.1", features = ["termination"] }
bs58 = "0.2.0"
getopts = "0.2"
cast = "0.2.2"
clap = "2.33.0"
serde = "1.0.110"
serde_derive = "1.0.110"
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"
exit-future = "0.2.0"
error-chain = "0.12.0"
dirs = "2.0.1"
smallvec = "1.0.0"
fnv = "1.0.6"
unsigned-varint = "0.2.3"
bytes = "0.4.12"
rand = "0.7.2"