[package]
name = "libp2p-wrapper"
version = "0.1.0"
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2018"

[dependencies]
libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "4e3003d5283040fee10da1299252dd060a838d97" }
types = { git = "https://github.com/jrhea/lighthouse", rev = "8eb1f6556a9f8ed72016b5a1776574a522073fd7", package = "types" }
ssz = { git = "https://github.com/jrhea/lighthouse", rev = "8eb1f6556a9f8ed72016b5a1776574a522073fd7", package = "eth2_ssz" }
hex = "0.3"
clap = "2.33.0"
serde = "1.0.102"
serde_derive = "1.0.102"
slog = { version = "2.5.2", features = ["max_level_trace"] }
tokio = "0.1.22"
tokio-io = "0.1.12"
futures = "0.1.29"
error-chain = "0.12.1"
dirs = "2.0.2"
fnv = "1.0.6"
unsigned-varint = "0.2.3"
tokio-io-timeout = "0.3.1"
smallvec = "1.0.0"
lru = "0.4.3"
parking_lot = "0.9.0"
sha2 = "0.8.0"
base64 = "0.11.0"
snap = "1"
target_info = "0.1.0"
bytes = "0.4.12"
