[package]
name = "mothra-ffi"
version = "0.1.0"
authors = ["Jonny Rhea <jonny.rhea@consensys.net>"]
edition = "2018"
description = "Foreign function interface to Mothra."
license = "Apache-2.0"

[dependencies]
mothra =  { path = "../", version = "0.1.0" }
cast = "0.2.2"
tokio = "0.1.22"
tokio-compat = { version = "0.1.5", features = ["rt-full"] }
slog-term = "^2.4.0"
slog-async = "^2.3.0"
slog = { version = "2.5.2" , features = ["max_level_trace"] }
env_logger = "0.6.0"

[lib]
name = "mothra"
path = "src/lib.rs"
crate-type = ["staticlib","cdylib"]

