[package]
name = "mothra-network"
version = "0.1.0"
authors = ["Age Manning <Age@AgeManning.com>", "Jonny Rhea <jonny.rhea@consensys.net"]
edition = "2018"
description = "Mothra p2p network layer."
license = "Apache-2.0"

[dependencies]
libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "4e3003d5283040fee10da1299252dd060a838d97", package = "libp2p"}
types = "0.2.0"
eth2_ssz = "0.1.2"
hex = "0.3"
serde = "1.0.102"
serde_derive = "1.0.102"
slog = { version = "2.5.2", features = ["max_level_trace"] }
tokio = "0.1.22"
tokio-compat = { version = "0.1.5", features = ["rt-full"] }
tokio-io = "0.1.12"
futures = "0.1.29"
error-chain = "0.12.1"
dirs = "2.0.2"
fnv = "1.0.6"
unsigned-varint = "0.2.3"
tokio-io-timeout = "0.3.1"
smallvec = "1.0.0"
lru = "0.4.3"
parking_lot = "0.9.0"
sha2 = "0.8.0"
base64 = "0.11.0"
snap = "1"
target_info = "0.1.0"
bytes = "0.4.12"
