[package]
name = "rust-example"
version = "0.1.0"
authors = ["Jonny Rhea <jonny.rhea@consensys.net>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
mothra = { path = "../../core"}
tokio = "0.1.22"
tokio-compat = { version = "0.1.5", features = ["rt-full"] }
slog-term = "^2.4.0"
slog-async = "^2.3.0"
slog = { version = "2.5.2" , features = ["max_level_trace"] }
env_logger = "0.6.0"
target_info = "0.1.0"
clap = "2.33.0"
