[package]
name = "eth2-libp2p"
version = "0.1.0"
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2018"

[dependencies]
eth2_ssz = { path = "../../../lighthouse/lighthouse/eth2/utils/ssz" }
eth2_ssz_derive = { path = "../../../lighthouse/lighthouse/eth2/utils/ssz_derive" }
slot_clock = { path = "../../../lighthouse/lighthouse/eth2/utils/slot_clock" }
types = { path =  "../../../lighthouse/lighthouse/eth2/types" }
libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "be5710bbde69d8c5be732c13ba64239e2f370a7b" }
enr =  { git = "https://github.com/SigP/rust-libp2p/", rev = "be5710bbde69d8c5be732c13ba64239e2f370a7b", features = ["serde"] }
clap = "2.32.0"
parking_lot = "0.7"
serde = "1.0"
serde_derive = "1.0"
slog = { version = "^2.4.1" , features = ["max_level_trace"] }
tokio = "0.1.16"
futures = "0.1.25"
error-chain = "0.12.0"
tokio-timer = "0.2.10"
dirs = "2.0.1"
tokio-io = "0.1.12"
smallvec = "0.6.10"
fnv = "1.0.6"
unsigned-varint = "0.2.2"
bytes = "0.4.12"
